...
                android:foregroundGravity="center_vertical|center|center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMode">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sMode"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:gravity="right|center_horizontal|center_vertical"
                    android:thumb="@drawable/thumb"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:track="@drawable/track" />

                <TextView
                    android:id="@+id/tvSwitchText"
                    android:layout_width="100dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="8dp"
                    android:gravity="clip_vertical|center_horizontal|left"
                    android:textAlignment="center"
                    android:textColor="@color/outwait_color"
...
                    app:layout_constraintEnd_toStartOf="@+id/sMode"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <android.widget.Button
                android:id="@+id/btnSave"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal|center_vertical"
...
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


            <mobi.upod.timedurationpicker.TimeDurationPicker
                android:id="@+id/configStandardDuration"
                android:layout_width="158dp"
                android:layout_height="185dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:background="@color/duration_digit_color"
...
                app:layout_constraintVertical_bias="0.0"
                app:timeUnits="hhmm">

            </mobi.upod.timedurationpicker.TimeDurationPicker>

            <android.widget.Button
                android:id="@+id/btnLogout"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="@{()->viewModel.logout()}"
...
