...
    <string name="editmode_header">Editmode is enabled</string>
    <string name="slotcode">Slot code</string>
    <string name="identifier">Identifier</string>
    <string name="duration">Duration</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="title_add_slot">Add a Slot</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="fixed_slot">Fixed Slot</string>
    <string name="undo">UNDO</string>
    <string name="slot_details">Slot details</string>
    <string name="standard_slot_duration">Default slot duration</string>
    <string name="notificationtime">Notification time</string>
...
    <string name="no_result">No Result</string>
    <string name="failure_add_slot">Failed: Please enter an appointment time</string>
    <string name="text_save_config">Settings saved</string>
    <string name="text_denied_save_config">Queue is not empty. Mode can\'t be changed, changes won\'t be saved</string>
    <string name="text_avoid_back_press_management">Please logout first</string>
    <string name="text_counter">Count of Clients: </string>
    <string name="modeOne">Mode 1</string>
    <string name="modeTwo">Mode 2</string>
    <string name="navigateUp">Navigate up</string>
    <string name="it_s_your_turn_in">It\'s your turn in:</string>
    <string name="back_press_client">You can enter a new appointment after your appointment is finished</string>
    <string name="save">Save</string>
    <string name="active_mode">Active Mode is</string>
...
